--- a/app/globals.css
+++ b/app/globals.css
@@ -1,10 +1,10 @@
-@import url("https://fonts.googleapis.com/css2?family=Sarabun:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap");
-@import "tailwindcss";
+@import url('https://fonts.googleapis.com/css2?family=Sarabun:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap');
+@import 'tailwindcss';
 
 :root {
-  --font-chula-bold: "CHULALONGKORNBold", sans-serif;
-  --font-chula-regular: "CHULALONGKORNReg", sans-serif;
-  --font-sarabun: "Sarabun", sans-serif;
+  --font-chula-bold: 'CHULALONGKORNBold', sans-serif;
+  --font-chula-regular: 'CHULALONGKORNReg', sans-serif;
+  --font-sarabun: 'Sarabun', sans-serif;
 
   --primary: #e26385;
   --secondary: #ea87a2;
@@ -38,22 +38,22 @@
   --background: var(--neutral-200);
   --foreground: var(--neutral-black);
 
-  --shadow-elevation-1: 0 1px 2px 0 rgba(0, 0, 0, 0.3),
-    0 1px 3px 1px rgba(0, 0, 0, 0.15);
-  --shadow-elevation-2: 0 1px 2px 0 rgba(0, 0, 0, 0.3),
-    0 2px 6px 2px rgba(0, 0, 0, 0.15);
-  --shadow-elevation-3: 0 4px 8px 3px rgba(0, 0, 0, 0.15),
-    0 1px 3px 0 rgba(0, 0, 0, 0.3);
-  --shadow-elevation-4: 0 6px 10px 4px rgba(0, 0, 0, 0.15),
-    0 2px 3px 0 rgba(0, 0, 0, 0.3);
-  --shadow-elevation-5: 0 8px 12px 6px rgba(0, 0, 0, 0.15),
-    0 4px 4px 0 rgba(0, 0, 0, 0.3);
+  --shadow-elevation-1:
+    0 1px 2px 0 rgba(0, 0, 0, 0.3), 0 1px 3px 1px rgba(0, 0, 0, 0.15);
+  --shadow-elevation-2:
+    0 1px 2px 0 rgba(0, 0, 0, 0.3), 0 2px 6px 2px rgba(0, 0, 0, 0.15);
+  --shadow-elevation-3:
+    0 4px 8px 3px rgba(0, 0, 0, 0.15), 0 1px 3px 0 rgba(0, 0, 0, 0.3);
+  --shadow-elevation-4:
+    0 6px 10px 4px rgba(0, 0, 0, 0.15), 0 2px 3px 0 rgba(0, 0, 0, 0.3);
+  --shadow-elevation-5:
+    0 8px 12px 6px rgba(0, 0, 0, 0.15), 0 4px 4px 0 rgba(0, 0, 0, 0.3);
 }
 
 @theme inline {
-  --font-chula-bold: "CHULALONGKORNBold", "sans-serif";
-  --font-chula-regular: "CHULALONGKORNReg", "sans-serif";
-  --font-sarabun: "Sarabun", "sans-serif";
+  --font-chula-bold: 'CHULALONGKORNBold', 'sans-serif';
+  --font-chula-regular: 'CHULALONGKORNReg', 'sans-serif';
+  --font-sarabun: 'Sarabun', 'sans-serif';
 
   --color-primary: #e26385;
   --color-secondary: #ea87a2;
